// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnnouncementBanner should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AnnouncementBanner
    bannerColor="#ddd"
    bannerDismissed={false}
    bannerEnabled={true}
    bannerText="Banner Text"
    bannerTextColor="#fff"
    navigator={Object {}}
    theme={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "flex": 1,
                "fontSize": 14,
                "marginRight": 5,
              },
              Object {
                "color": "#fff",
              },
            ]
          }
        >
          <RemoveMarkdown
            value="Banner Text"
          />
        </Text>
        <Icon
          allowFontScaling={false}
          color="#fff"
          name="info"
          size={16}
        />
      </TouchableOpacity>,
      "style": Array [
        Object {
          "overflow": "hidden",
          "paddingHorizontal": 10,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#ddd",
          "height": 0,
        },
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": Array [
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "flex": 1,
                  "fontSize": 14,
                  "marginRight": 5,
                },
                Object {
                  "color": "#fff",
                },
              ]
            }
          >
            <RemoveMarkdown
              value="Banner Text"
            />
          </Text>,
          <Icon
            allowFontScaling={false}
            color="#fff"
            name="info"
            size={16}
          />,
        ],
        "onPress": [Function],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": <RemoveMarkdown
              value="Banner Text"
            />,
            "ellipsizeMode": "tail",
            "numberOfLines": 1,
            "style": Array [
              Object {
                "flex": 1,
                "fontSize": 14,
                "marginRight": 5,
              },
              Object {
                "color": "#fff",
              },
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "value": "Banner Text",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allowFontScaling": false,
            "color": "#fff",
            "name": "info",
            "size": 16,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "flex": 1,
                  "fontSize": 14,
                  "marginRight": 5,
                },
                Object {
                  "color": "#fff",
                },
              ]
            }
          >
            <RemoveMarkdown
              value="Banner Text"
            />
          </Text>
          <Icon
            allowFontScaling={false}
            color="#fff"
            name="info"
            size={16}
          />
        </TouchableOpacity>,
        "style": Array [
          Object {
            "overflow": "hidden",
            "paddingHorizontal": 10,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#ddd",
            "height": 0,
          },
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "flex": 1,
                    "fontSize": 14,
                    "marginRight": 5,
                  },
                  Object {
                    "color": "#fff",
                  },
                ]
              }
            >
              <RemoveMarkdown
                value="Banner Text"
              />
            </Text>,
            <Icon
              allowFontScaling={false}
              color="#fff"
              name="info"
              size={16}
            />,
          ],
          "onPress": [Function],
          "style": Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": <RemoveMarkdown
                value="Banner Text"
              />,
              "ellipsizeMode": "tail",
              "numberOfLines": 1,
              "style": Array [
                Object {
                  "flex": 1,
                  "fontSize": 14,
                  "marginRight": 5,
                },
                Object {
                  "color": "#fff",
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "value": "Banner Text",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "allowFontScaling": false,
              "color": "#fff",
              "name": "info",
              "size": 16,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`AnnouncementBanner should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AnnouncementBanner
    bannerColor="#ddd"
    bannerDismissed={false}
    bannerEnabled={false}
    bannerText="Banner Text"
    bannerTextColor="#fff"
    navigator={Object {}}
    theme={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
